<resources>
    <string name="app_name">Vehicle Repair Tracker</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="generate_report">Generate Report</string>
    <string name="search">Search</string>
    <string name="search_vehicles">Search vehicles</string>
    <string name="vehicle_year">Vehicle Year</string>
    <string name="vehicle_make">Vehicle Make</string>
    <string name="vehicle_model">Vehicle Model</string>
    <string name="repairs">Repairs</string>
    <string name="car_details">Vehicle Details</string>
    <string name="vehicle_repair_tracker">Vehicle Repair Tracker</string>
    <string name="keep_track_of_all_your_vehicle_repairs">Keep Track Of All Your Vehicle Repairs!</string>
    <string name="vehicles">Vehicles</string>
    <string name="repair">Repair</string>
    <string name="repair_date">Repair Date</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="repair_details">Repair Details</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="right_text">Right Text</string>
    <string name="left_text">Left Text</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="saveRepair">save</string>
    <string name="deleteRepair">delete</string>
    <string name="sign_up">Sign Up</string>
    <string name="default_web_client_id">
    116116821954-qnp6fvei3s9jjnkqsubg5lpc9n9gm864.apps.googleusercontent.com
    </string>
    <string name="add_a_vehicle">Add a vehicle!</string>
    <string name="add_car_button">Add car button</string>
    <string name="vehicles1">Vehicles</string>
    <string name="add_vehicle" />
    <string name="add_vehicle_prompt" />
    <string name="vehicles_title" />
    <string name="add_repair_button">Add repair button</string>
    <string name="save_vehicle">Save Vehicle</string>
    <string name="email">Email</string>
    <string name="vehicle_repair_tracker1">Vehicle Repair Tracker</string>
    <string name="new_user_enter_email_and_password_then_press_sign_up_or_sign_up_with_google">New user: Enter email and password then press sign up or sign up with Google.</string>
    <string name="vehicle_year_hint" />
    <string name="add_repair" />
    <string name="vehicles11">Vehicles</string>
    <string name="add_car_details">add car details</string>
    <string name="addVehicle">Add a vehicle!</string>
</resources>